2007-08-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaclassregisterfunction.vala,
	  gobject/valacodegeneratorinterface.vala,
	  gobject/valainterfaceregisterfunction.vala,
	  gobject/valatyperegisterfunction.vala: generate static get_type
	  functions for non-public classes and interfaces,
	  patch by Ed Schouten, fixes bug 470428

2007-08-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacreationmethod.vala, gobject/valacodegenerator.vala,
	  vapigen/valagidlparser.vala: use exceptions instead of GError
	  parameters for generated bindings, based on patch by Alberto Ruiz,
	  fixes bug 470432

	* vapi/clutter-0.3.vala, vapi/gdk-2.0.vala, vapi/gio-standalone.vala,
	  vapi/gnome-desktop-2.0.vala, vapi/gstreamer-0.10.vala,
	  vapi/gtk+-2.0.vala, vapi/hildon-1.vala, vapi/pango.vala: regenerated

2007-08-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala, vapi/gdk-2.0.vala,
	  vapi/gio-standalone.vala,
	  vapi/gnome-desktop-2.0.vala, vapi/gstreamer-0.10.vala,
	  vapi/gtk+-2.0.vala, vapi/libsoup-2.2.vala,
	  vapi/packages/gdk-2.0/gdk-2.0.metadata,
	  vapi/packages/gio-standalone/gio-standalone.metadata,
	  vapi/packages/gnome-desktop-2.0/gnome-desktop-2.0.metadata,
	  vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata,
	  vapi/packages/gtk+-2.0/gtk+-2.0.metadata,
	  vapi/packages/vte/vte.metadata, vapi/pango.vala, vapi/vte.vala:
	  fix generated string out and string array parameters
	* vapi/glib-2.0.vala: add g_listenv

2007-08-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala, vapi/Makefile.am,
	  vapi/gnome-desktop-2.0.vala, vapi/packages/gnome-desktop-2.0/: add
	  GNOME Desktop Library bindings

2007-08-24  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala, vapi/gtk+-2.0.vala,
	  vapi/packages/gtk+-2.0/gtk+-2.0.metadata: fix array fields of
	  Gtk.Style, fixes bug 463959
	* vapi/glib-2.0.vala: add g_get_user_data_dir

2007-08-24  Jürg Billeter  <j@bitron.ch>
